# self-service-portal

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.web  README.md  REFACTORING_PROGRESS.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
.github/docs/: implementation-phases.md
.github/prompts/: catalog-admin-dashboard.prompt.md  dynamic-catalog.prompt.md  initial-implementation.prompt.md
alembic/: env.py
alembic/versions/: b33e4d6a4e9e_create_catalog_tables_baseline.py  da2aad34b9e3_add_tags_column_to_catalog_items.py
api/: deps.py  main.py  scripts.py  settings.py  task_queue.py  test_api.py  test_settings.py
api/admin/: routes_catalog.py
api/catalog/: bundle_routes.py  bundles.py  descriptor_utils.py  git_routes.py  models.py  registry.py  repository.py  routes.py  settings.py  validate.py
api/common/: db.py
docs/: CATALOG_EXECUTION_HANGING_FIX.md  CATALOG_IMPORT.md  FIX_SUMMARY.md  FORM_VALIDATION.md  MIGRATIONS.md  PERSISTENCE_ISSUE.md  VALIDATION_FIX_TESTS.md
scripts/: generate_migration.sh  parity_check.py  test_persistence.py
tests/: conftest.py  test_settings.py
tests/api/: test_api.py  test_task_queue.py
tests/worker/: test_celery_app.py  test_provision_server.py  (+1 more)
web/: STRUCTURE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
worker/: catalog_execute.py  catalog_import.py  catalog_registry.py  catalog_sync.py  celery_app.py  celery_tasks.py  example_long.py  job_status.py  provision_server.py  scripts.py  sync_catalog_item.py  tasks.py  worker_settings.py
(+141 files in other folders)
